refactor(sql): move select IR implementations into connector
Move the field-backed, extracting, and existence select representations into
the connector-owned compiler IR. Use plain Java implementations, preserve the
legacy equality behavior, and cover the relocated transformations with tests.

Co-authored-by: Codex GPT-5.6-sol <codex@openai.com>